# PySwarm

./: .cruft.json  AUTHORS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/reference/: pyswarm.md
src/pyswarm/: __init__.py
tests/: test_add.py
